Add a title attribute to the Mozilla footer link

--- a/sites/updates.thunderbird.net/includes/base/footer.html
+++ b/sites/updates.thunderbird.net/includes/base/footer.html
@@ -2,7 +2,7 @@
 <footer id="footer">
   <section class="footer-inner">
     <div class="mzla">
-      <a href="https://mozilla.org" class="mozilla-logo">
+      <a href="https://mozilla.org" class="mozilla-logo" title="{{ _('Mozilla') }}">
         {{ svg('mozilla-lockup') }}
       </a>
     </div>
