Fix introduction paragraph on breakpoints

--- a/assets/less/whatsnew-140.less
+++ b/assets/less/whatsnew-140.less
@@ -365,7 +365,7 @@ main {
 
   @media (max-width: @lg) {
     .main-content {
-      .header {
+      .header, .introduction {
         padding: 1rem;
 
         p.row {
@@ -380,7 +380,7 @@ main {
 
   @media (max-width: @sm) {
     .main-content {
-      .header {
+      .header, .introduction {
         padding: 1rem;
 
         .row {
