--- a/assets/less/whatsnew-140.less
+++ b/assets/less/whatsnew-140.less
@@ -346,6 +346,8 @@ main {
       width: 100%;
       height: 100%;
       background-image: var(--appeal-background-image-set);
+      background-position: top center;
+      background-repeat: repeat-x;
       z-index: 0;
     }
 
