Revert previous commit, and inline the logo's svg due to a Safari rendering bug.

--- a/assets/less/whatsnew-140.less
+++ b/assets/less/whatsnew-140.less
@@ -100,7 +100,8 @@ main {
 
         .header-logo {
           padding-top: 3.0rem;
-          width: 34.0rem;
+          width: 34.125rem;
+          height: 10.125rem;
         }
 
         .header-star-group {
