Small viewport fixes for What's new 140, and June 2025 appeal.

--- a/assets/less/whatsnew-140.less
+++ b/assets/less/whatsnew-140.less
@@ -101,7 +101,10 @@ main {
         .header-logo {
           padding-top: 3.0rem;
           width: 34.125rem;
-          height: 10.125rem;
+
+          svg {
+            width: 100%;
+          }
         }
 
         .header-star-group {
@@ -374,6 +377,7 @@ main {
           padding: 0;
         }
       }
+
       .features {
         gap: 1rem;
       }
