--- a/assets/less/start.less
+++ b/assets/less/start.less
@@ -130,46 +130,58 @@
   --font-heading: 'Metropolis', X-LocaleSpecific, sans-serif;
 
   --bg: var(--grey-05);
-  --bg-gradient:
-    linear-gradient(to top right,
-      rgba(18, 133, 252, 0.14) 0%,
-      rgba(18, 133, 252, 0) 33%,
-      rgba(18, 133, 252, 0) 67%,
-      rgba(18, 133, 252, 0.14) 100%),
-    linear-gradient(to right,
-      rgba(34, 13, 252, 0.05) 0%,
-      rgba(34, 13, 252, 0) 30%,
-      rgba(34, 13, 252, 0.05) 100%);
   --border: var(--grey-20);
   --text: var(--ink-80);
   --shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
 }
 
 [data-channel="daily"] {
-  --text-gradient: linear-gradient(-270deg, var(--magenta-50), var(--purple-50));
-  --bg-warning: color-mix(in srgb, var(--magenta-50) 5%, transparent);
-  --text-warning: var(--magenta-90);
-  --warning-links: var(--purple-80);
-  --list-dot-inner: var(--magenta-90);
-  --list-dot-outer: var(--magenta-10);
+  --bg-gradient:
+    linear-gradient(to top right,
+    rgba(143, 18, 252, 0.14) 0%,
+    rgba(143, 18, 252, 0) 33%,
+    rgba(143, 18, 252, 0) 67%,
+    rgba(143, 18, 252, 0.14) 100%
+    ),
+    linear-gradient(to right,
+    rgba(32, 12, 252, 0.05) 0%,
+    rgba(32, 12, 252, 0) 30%,
+    rgba(32, 12, 252, 0.05) 100%
+    );
+  --text-gradient: linear-gradient(90deg, var(--magenta-50) 0%, var(--purple-50) 50%, var(--purple-90) 100%);
+
 }
 
 [data-channel="beta"] {
-  --text-gradient: linear-gradient(-270deg, var(--teal-50), var(--blue-50));
-  --bg-warning: color-mix(in srgb, var(--teal-50) 5%, transparent);
-  --text-warning: var(--teal-90);
-  --warning-links: var(--blue-80);
-  --list-dot-inner: var(--teal-90);
-  --list-dot-outer: var(--teal-10);
+  --bg-gradient:
+    linear-gradient(to top right,
+    rgba(18, 131, 252, 0.14) 0%,
+    rgba(18, 131, 252, 0) 33%,
+    rgba(18, 131, 252, 0) 67%,
+    rgba(18, 131, 252, 0.14) 100%
+    ),
+    linear-gradient(to right,
+    rgba(12, 244, 252, 0.05) 0%,
+    rgba(12, 244, 252, 0) 30%,
+    rgba(12, 244, 252, 0.05) 100%
+    );
+  --text-gradient: linear-gradient(90deg, var(--teal-50) 0%, var(--blue-50) 100%);
 }
 
-[data-channel="release"] {
-  --text-gradient: linear-gradient(-270deg, var(--teal-50), var(--blue-50));
-  --bg-warning: color-mix(in srgb, var(--teal-50) 5%, transparent);
-  --text-warning: var(--teal-90);
-  --warning-links: var(--blue-80);
-  --list-dot-inner: var(--teal-90);
-  --list-dot-outer: var(--teal-10);
+[data-channel="release"], [data-channel="esr"] {
+  --bg-gradient:
+    linear-gradient(to top right,
+    rgba(143, 18, 252, 0.14) 0%,
+    rgba(143, 18, 252, 0) 33%,
+    rgba(143, 18, 252, 0) 67%,
+    rgba(143, 18, 252, 0.14) 100%
+    ),
+    linear-gradient(to right,
+    rgba(32, 12, 252, 0.05) 0%,
+    rgba(32, 12, 252, 0) 30%,
+    rgba(32, 12, 252, 0.05) 100%
+    );
+  --text-gradient: linear-gradient(90deg, var(--blue-60) 0%, var(--purple-60) 100%);
 }
 
  @media (prefers-color-scheme: dark) {
@@ -182,30 +194,18 @@
   }
 
   [data-channel="daily"] {
-    --text-gradient: linear-gradient(-270deg, var(--magenta-40), var(--purple-40));
+    --text-gradient: linear-gradient(90deg, var(--magenta-50) 0%, var(--purple-50) 50%, var(--purple-90) 100%);
     --bg-warning: color-mix(in srgb, var(--magenta-50) 5%, transparent);
-    --text-warning: var(--magenta-10);
-    --warning-links: var(--purple-30);
-    --list-dot-inner: var(--magenta-30);
-    --list-dot-outer: var(--magenta-90);
   }
 
   [data-channel="beta"] {
-    --text-gradient: linear-gradient(-270deg, var(--teal-40), var(--blue-40));
+    --text-gradient: linear-gradient(90deg, var(--teal-50) 0%, var(--blue-50) 100%);
     --bg-warning: color-mix(in srgb, var(--teal-50) 5%, transparent);
-    --text-warning: var(--teal-10);
-    --warning-links: var(--blue-30);
-    --list-dot-inner: var(--teal-30);
-    --list-dot-outer: var(--teal-90);
   }
 
   [data-channel="release"] {
-    --text-gradient: linear-gradient(-270deg, var(--teal-40), var(--blue-40));
+    --text-gradient: linear-gradient(90deg, var(--blue-60) 0%, var(--purple-60) 100%);
     --bg-warning: color-mix(in srgb, var(--teal-50) 5%, transparent);
-    --text-warning: var(--teal-10);
-    --warning-links: var(--blue-30);
-    --list-dot-inner: var(--teal-30);
-    --list-dot-outer: var(--teal-90);
   }
 }
 
@@ -291,7 +291,7 @@ h3 {
     position: absolute;
     top: 1.25rem;
     right: 1rem;
-    background: linear-gradient(90deg, #0065ff 0%, #9f5fff 100%);
+    background: var(--text-gradient);
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -314,7 +314,7 @@ h3 {
     margin: 1rem 0;
   }
   .gradient-text {
-    background: linear-gradient(90deg, #0065ff 0%, #9f5fff 100%);
+    background: var(--text-gradient);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
