--- a/assets/less/start.less
+++ b/assets/less/start.less
@@ -293,9 +293,10 @@ h3 {
     right: 1rem;
     background: var(--text-gradient);
     color: #fff;
+    text-decoration: none;
     border: none;
     border-radius: 4px;
-    padding: 0.55rem 1.4rem;
+    padding: 0.55rem 1rem;
     font-size: 1.05rem;
     font-weight: 600;
     display: flex;
@@ -397,6 +398,9 @@ h3 {
       font-size: 1.1rem;
       line-height: 1.6;
       padding-left: 0.25rem;
+    }
+    ul {
+      padding-left: 1.25rem;
     }
   }
   footer {
