Make donate button on ESR140 start page clickable in small viewports. (Fixes #875)

--- a/assets/less/start.less
+++ b/assets/less/start.less
@@ -297,6 +297,9 @@ h3 {
       text-decoration: underline;
     }
   }
+  .top-links {
+    z-index: 9999
+  }
   #donate-top {
     position: absolute;
     top: 1.25rem;
