Small fixes and improvements for the new Start page. (Fixes #877)

--- a/assets/less/start.less
+++ b/assets/less/start.less
@@ -138,15 +138,15 @@
 [data-channel="daily"] {
   --bg-gradient:
     linear-gradient(to top right,
-    rgba(143, 18, 252, 0.14) 0%,
-    rgba(143, 18, 252, 0) 33%,
-    rgba(143, 18, 252, 0) 67%,
-    rgba(143, 18, 252, 0.14) 100%
+      rgba(143, 18, 252, 0.14) 0%,
+      rgba(143, 18, 252, 0) 33%,
+      rgba(143, 18, 252, 0) 67%,
+      rgba(143, 18, 252, 0.14) 100%
     ),
     linear-gradient(to right,
-    rgba(32, 12, 252, 0.05) 0%,
-    rgba(32, 12, 252, 0) 30%,
-    rgba(32, 12, 252, 0.05) 100%
+      rgba(32, 12, 252, 0.05) 0%,
+      rgba(32, 12, 252, 0) 30%,
+      rgba(32, 12, 252, 0.05) 100%
     );
   --text-gradient: linear-gradient(90deg, var(--magenta-50) 0%, var(--purple-50) 50%, var(--purple-90) 100%);
   --button-bg: radial-gradient(ellipse at center, rgba(154, 42, 252, 0.25) 0%, transparent 70%);
@@ -156,38 +156,40 @@
 [data-channel="beta"] {
   --bg-gradient:
     linear-gradient(to top right,
-    rgba(18, 131, 252, 0.14) 0%,
-    rgba(18, 131, 252, 0) 33%,
-    rgba(18, 131, 252, 0) 67%,
-    rgba(18, 131, 252, 0.14) 100%
+      rgba(18, 131, 252, 0.14) 0%,
+      rgba(18, 131, 252, 0) 33%,
+      rgba(18, 131, 252, 0) 67%,
+      rgba(18, 131, 252, 0.14) 100%
     ),
     linear-gradient(to right,
-    rgba(12, 244, 252, 0.05) 0%,
-    rgba(12, 244, 252, 0) 30%,
-    rgba(12, 244, 252, 0.05) 100%
+      rgba(12, 244, 252, 0.05) 0%,
+      rgba(12, 244, 252, 0) 30%,
+      rgba(12, 244, 252, 0.05) 100%
     );
   --text-gradient: linear-gradient(90deg, var(--teal-50) 0%, var(--blue-50) 100%);
   --button-bg: radial-gradient(ellipse at center, rgba(42, 143, 252, 0.25) 0%, transparent 70%);
 }
 
-[data-channel="release"], [data-channel="esr"] {
+[data-channel="release"],
+[data-channel="esr"] {
   --bg-gradient:
     linear-gradient(to top right,
-    rgba(143, 18, 252, 0.14) 0%,
-    rgba(143, 18, 252, 0) 33%,
-    rgba(143, 18, 252, 0) 67%,
-    rgba(143, 18, 252, 0.14) 100%
+      rgba(143, 18, 252, 0.14) 0%,
+      rgba(143, 18, 252, 0) 33%,
+      rgba(143, 18, 252, 0) 67%,
+      rgba(143, 18, 252, 0.14) 100%
     ),
-    linear-gradient(to right,
-    rgba(32, 12, 252, 0.05) 0%,
-    rgba(32, 12, 252, 0) 30%,
-    rgba(32, 12, 252, 0.05) 100%
+    linear-gradient(
+      to right,
+      rgba(32, 12, 252, 0.05) 0%,
+      rgba(32, 12, 252, 0) 30%,
+      rgba(32, 12, 252, 0.05) 100%
     );
   --text-gradient: linear-gradient(90deg, var(--blue-60) 0%, var(--purple-60) 100%);
   --button-bg: radial-gradient(ellipse at center, rgba(58, 42, 252, 0.25) 0%, transparent 70%);
 }
 
- @media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: dark) {
   :root {
     --bg: #000;
     --bg-gradient: linear-gradient(to bottom, black, var(--ink-90));
@@ -230,7 +232,7 @@ body {
   padding: 0;
   background: var(--bg-gradient), var(--bg);
   color: var(--text);
-  line-height: 1.6;
+  line-height: 1.5;
   position: relative;
 }
 h1,
@@ -267,8 +269,8 @@ h3 {
     padding: 0;
   }
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  line-height: 1.5;
   min-height: 100vh;
+  padding-inline: 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -291,14 +293,14 @@ h3 {
     position: absolute;
     top: 2rem;
     left: 1rem;
-    font-size: 0.9rem;
+    font-size: 0.8rem;
     font-weight: 600;
     &:hover {
       text-decoration: underline;
     }
   }
   .top-links {
-    z-index: 9999
+    z-index: 9999;
   }
   #donate-top {
     position: absolute;
@@ -310,7 +312,7 @@ h3 {
     border: none;
     border-radius: 4px;
     padding: 0.55rem 1rem;
-    font-size: 1.05rem;
+    font-size: 1rem;
     font-weight: 600;
     display: flex;
     align-items: center;
@@ -322,7 +324,7 @@ h3 {
     }
   }
   h1 {
-    font-size: clamp(2.25rem, 5vw, 4rem);
+    font-size: clamp(2rem, 5vw, 3.8rem);
     font-weight: 800;
     line-height: 1;
   }
@@ -335,10 +337,11 @@ h3 {
   }
   .tagline {
     max-width: 40rem;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     font-weight: 600;
   }
   .btn-set {
+    font-size: 1rem;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -388,7 +391,7 @@ h3 {
     border: 1px solid var(--border);
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.04);
-    margin: 1.5rem 1rem;
+    margin: 1.5rem 0;
     padding: 4rem 4rem;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
@@ -396,28 +399,26 @@ h3 {
   }
   .feature-box {
     h3 {
-      font-size: 1.8rem;
+      font-size: 1.6rem;
       font-weight: 800;
       margin-bottom: 0.25rem;
     }
     .subhead {
-      font-size: 1.3rem;
+      font-size: 1.2rem;
       font-weight: 600;
       margin: 0 0 1rem;
-      padding-left: 0.25rem;
     }
     p {
-      font-size: 1.1rem;
+      font-size: 1rem;
       line-height: 1.6;
-      padding-left: 0.25rem;
     }
     ul {
       padding-left: 1.25rem;
     }
   }
   footer {
-    margin-top: 1.5rem;
-    font-size: 1rem;
+    margin-bottom: 1.5rem;
+    font-size: 0.9rem;
     text-align: center;
   }
 }
