--- a/sites/tb.pro/includes/base/page.html
+++ b/sites/tb.pro/includes/base/page.html
@@ -27,4 +27,8 @@
   {% block details %}{% endblock %}
 </section>
 
+<section id="faq">
+  {% block faq %}{% endblock %}
+</section>
+
 {% endblock %}
