--- a/sites/tb.pro/includes/base/footer.html
+++ b/sites/tb.pro/includes/base/footer.html
@@ -1,4 +1,4 @@
-<header class="site-footer">
+<footer class="site-footer">
   <div class="site-nav">
     <a id="nav-link-home" href="#">logo text</a>
     <a href="#">Home</a>
@@ -6,4 +6,4 @@
     <a href="#">Appointment</a>
     <a href="#">Send</a>
   </div>
-</header>
+</footer>
