--- a/assets/less/tbpro/colours.less
+++ b/assets/less/tbpro/colours.less
@@ -1,4 +1,8 @@
 :root {
+    // actions, copied from TFAndroidLight
+    --color-on-primary: #ffffff;
+    --color-on-secondary: #ffffff;
+
     // Surface
     --color-surface-base: #feffff;
     --color-surface-raised: #feffff;
@@ -66,70 +70,74 @@
 
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    // Surface
-    --color-surface-base: #1a202c;
-    --color-surface-raised: #262d3b;
-    --color-surface-lower: #18181b;
-    --color-surface-subtle: #262d3b;
-    --color-surface-deep: #3d4d67;
-    --color-surface-border: #3d4d67;
-    --color-surface-border-intense: #5e7799;
+    :root {
+        // actions, copied from TFAndroidDark
+        --color-on-primary: #003549;
+        --color-on-secondary: #003352;
 
-    // Primary
-    --color-primary-soft: #262c40;
-    --color-primary-default: #58c9ff;
-    --color-primary-hover: #32aeff;
-    --color-primary-pressed: #1b90f5;
+        // Surface
+        --color-surface-base: #1a202c;
+        --color-surface-raised: #262d3b;
+        --color-surface-lower: #18181b;
+        --color-surface-subtle: #262d3b;
+        --color-surface-deep: #3d4d67;
+        --color-surface-border: #3d4d67;
+        --color-surface-border-intense: #5e7799;
 
-    // Secondary
-    --color-secondary-soft: #3a0764;
-    --color-secondary-default: #f5e8ff;
-    --color-secondary-hover: #ecd5ff;
-    --color-secondary-pressed: #ddb4fe;
+        // Primary
+        --color-primary-soft: #262c40;
+        --color-primary-default: #58c9ff;
+        --color-primary-hover: #32aeff;
+        --color-primary-pressed: #1b90f5;
 
-    // Success
-    --color-success-soft: #082b16;
-    --color-success-default: #defae7;
-    --color-success-hover: #c0f2cf;
-    --color-success-pressed: #81d4b5;
+        // Secondary
+        --color-secondary-soft: #3a0764;
+        --color-secondary-default: #f5e8ff;
+        --color-secondary-hover: #ecd5ff;
+        --color-secondary-pressed: #ddb4fe;
 
-    // Warning
-    --color-warning-soft: #423606;
-    --color-warning-default: #fef2c3;
-    --color-warning-hover: #fee78a;
-    --color-warning-pressed: #fdd847;
+        // Success
+        --color-success-soft: #082b16;
+        --color-success-default: #defae7;
+        --color-success-hover: #c0f2cf;
+        --color-success-pressed: #81d4b5;
 
-    // Critical
-    --color-critical-soft: #7f1d1d;
-    --color-critical-default: #fca5a5;
-    --color-critical-hover: #f87171;
-    --color-critical-pressed: #ef4444;
+        // Warning
+        --color-warning-soft: #423606;
+        --color-warning-default: #fef2c3;
+        --color-warning-hover: #fee78a;
+        --color-warning-pressed: #fdd847;
 
-    // Text + Icon
-    --color-text-base: #eeeef0;
-    --color-text-secondary: #e4e4e7;
-    --color-text-muted: #7f94ac;
-    --color-text-highlight: #58c9ff;
-    --color-text-warning: #fee78a;
-    --color-text-critical: #ef4444;
-    --color-text-sucess: #55d37e;
+        // Critical
+        --color-critical-soft: #7f1d1d;
+        --color-critical-default: #fca5a5;
+        --color-critical-hover: #f87171;
+        --color-critical-pressed: #ef4444;
 
-    --color-icon-base: #eeeef0;
-    --color-icon-secondary: #e4e4e7;
-    --color-icon-muted: #7f94ac;
-    --color-icon-highlight: #58c9ff;
-    --color-icon-warning: #fee78a;
-    --color-icon-critical: #ef4444;
-    --color-icon-sucess: #55d37e;
+        // Text + Icon
+        --color-text-base: #eeeef0;
+        --color-text-secondary: #e4e4e7;
+        --color-text-muted: #7f94ac;
+        --color-text-highlight: #58c9ff;
+        --color-text-warning: #fee78a;
+        --color-text-critical: #ef4444;
+        --color-text-sucess: #55d37e;
+
+        --color-icon-base: #eeeef0;
+        --color-icon-secondary: #e4e4e7;
+        --color-icon-muted: #7f94ac;
+        --color-icon-highlight: #58c9ff;
+        --color-icon-warning: #fee78a;
+        --color-icon-critical: #ef4444;
+        --color-icon-sucess: #55d37e;
 
 
-    // Accent
-    --color-teal: #a3ece3;
-    --color-blue: #58c9ff;
-    --color-purple: #8022ce;
-    --color-orange: #fec18a;
-    --color-pink: #fbd3f6;
-    --color-ink: #c3cade;
-  }
+        // Accent
+        --color-teal: #a3ece3;
+        --color-blue: #58c9ff;
+        --color-purple: #8022ce;
+        --color-orange: #fec18a;
+        --color-pink: #fbd3f6;
+        --color-ink: #c3cade;
+    }
 }
