--- a/sites/tb.pro/includes/base/footer.html
+++ b/sites/tb.pro/includes/base/footer.html
@@ -1,9 +1,30 @@
-<footer class="site-footer">
+<footer id="tb-footer">
   <div class="site-nav">
-    <a id="nav-link-home" href="#">logo text</a>
-    <a href="#">Home</a>
-    <a href="#">Thundermail</a>
-    <a href="#">Appointment</a>
-    <a href="#">Send</a>
+    <a id="nav-link-home" href="#">
+      logo text
+    </a>
+    <div class="site-nav-links">
+      <a href="#">Home</a>
+      <a href="#">Thundermail</a>
+      <a href="#">Appointment</a>
+      <a href="#">Send</a>
+    </div>
+  </div>
+  <div id="moz-nav">
+    <a id="moz-link-home" href="#">moz logo</a>
+    <div class="moz-nav-links">
+      <a href="#">Privacy Policy</a>
+      <a href="#">Cookies</a>
+      <a href="#">Legal</a>
+      <a href="#">Send DMCA Notice</a>
+      <a href="#">Report Fraud</a>
+      <a href="#">Participation Guidelines</a>
+    </div>
+  </div>
+  <div id="tb-legal">
+    <p>Thunderbird is part of MZLA Technologies Corporation, a wholly owned subsidiary of Mozilla Foundation. Portions of this content are &copy;1998–2025 by individual contributors. Content available under a Creative Commons license.</p>
+    <p>
+      <a href="#">Contribute to this site</a>
+    </p>
   </div>
 </footer>
