--- a/sites/tb.pro/includes/base/footer.html
+++ b/sites/tb.pro/includes/base/footer.html
@@ -1,7 +1,7 @@
 <footer id="tb-footer">
-  <div class="site-nav">
+  <div id="site-nav">
     <a id="nav-link-home" href="#">
-      logo text
+      [tb logo]
     </a>
     <div class="site-nav-links">
       <a href="#">Home</a>
@@ -11,7 +11,7 @@
     </div>
   </div>
   <div id="moz-nav">
-    <a id="moz-link-home" href="#">moz logo</a>
+    <a id="moz-link-home" href="#">[moz logo]</a>
     <div class="moz-nav-links">
       <a href="#">Privacy Policy</a>
       <a href="#">Cookies</a>
@@ -20,11 +20,12 @@
       <a href="#">Report Fraud</a>
       <a href="#">Participation Guidelines</a>
     </div>
+    <div id="tb-legal">
+      <p>Thunderbird is part of MZLA Technologies Corporation, a wholly owned subsidiary of Mozilla Foundation. Portions of this content are &copy;1998–2025 by individual contributors. Content available under a Creative Commons license.</p>
+      <p>
+        <a href="#">Contribute to this site</a>
+      </p>
+    </div>
   </div>
-  <div id="tb-legal">
-    <p>Thunderbird is part of MZLA Technologies Corporation, a wholly owned subsidiary of Mozilla Foundation. Portions of this content are &copy;1998–2025 by individual contributors. Content available under a Creative Commons license.</p>
-    <p>
-      <a href="#">Contribute to this site</a>
-    </p>
-  </div>
+
 </footer>
